Fix whitespace and add transition to morocco

--- a/css/app.css
+++ b/css/app.css
@@ -63,8 +63,10 @@ h2 {
     background-color: orangered;
     color: white;
 }
+
 #morocco{
     background-color: yellow;
     color: #333;
+    transition: .3s;
 }
 
